--- a/notebooks/sanpigh.ipynb
+++ b/notebooks/sanpigh.ipynb
@@ -66,7 +66,10 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "24d42bfb",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -243,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
